deploy: 7ce699c8cd8e34865da5a8a03cef4192b6964447

--- a/README.html
+++ b/README.html
@@ -20,7 +20,7 @@
 <meta description='The blog of Shrisha Rao'/>
 <link rel='alternate' type='application+rss/xml' title='The blog of Shrisha Rao' href='posts/rss.xml'/>
 <link rel='stylesheet' href='css/index.css?v=c18771e4d9917f7bbeba0dc8707195c42a1cf1d75f55928214254bd81d1a0c6e'/>
-<link rel="stylesheet" href="css/site.css?v=1724049050128a68b91de249cc566223a64243e0c616e4db3fff5afb12b6cfe6" type="text/css">
+<link rel="stylesheet" href="css/site.css?v=b5b7fa25d3b5180d3a91f21724efbeef14457af6f2d28a5d32e82233efe9f356" type="text/css">
 </head>
 <body>
 <header id="preamble" class="status">
@@ -82,9 +82,9 @@
 <header>
 <h1 class="title">My homepage with org-mode</h1>
 </header>
-<section id="outline-container-org78dfc1f" class="outline-2">
-<h2 id="org78dfc1f">Introduction</h2>
-<div class="outline-text-2" id="text-org78dfc1f">
+<section id="outline-container-org4adf9f4" class="outline-2">
+<h2 id="org4adf9f4">Introduction</h2>
+<div class="outline-text-2" id="text-org4adf9f4">
 <p>
 This setup based on <a href="https://orgmode.org">org-mode</a>.
 </p>
