--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <meta description='The blog of Shrisha Rao'/>
 <link rel='alternate' type='application+rss/xml' title='The blog of Shrisha Rao' href='posts/rss.xml'/>
 <link rel='stylesheet' href='css/index.css?v=c18771e4d9917f7bbeba0dc8707195c42a1cf1d75f55928214254bd81d1a0c6e'/>
-<link rel="stylesheet" href="css/site.css?v=1724049050128a68b91de249cc566223a64243e0c616e4db3fff5afb12b6cfe6" type="text/css">
+<link rel="stylesheet" href="css/site.css?v=b5b7fa25d3b5180d3a91f21724efbeef14457af6f2d28a5d32e82233efe9f356" type="text/css">
 </head>
 <body>
 <header id="preamble" class="status">
@@ -112,9 +112,9 @@ imagination. Prepare to be captivated, <br> inspired, and perhaps even slightly 
 as we embark upon this exhilarating journey.
 </p>
 
-<section id="outline-container-orgf613520" class="outline-2 latest-section">
-<h2 id="orgf613520"><i aria-hidden='true' class='fa fa-bookmark'></i> Latest Posts</h2>
-<div class="outline-text-2" id="text-orgf613520">
+<section id="outline-container-org2c8d455" class="outline-2 latest-section">
+<h2 id="org2c8d455"><i aria-hidden='true' class='fa fa-bookmark'></i> Latest Posts</h2>
+<div class="outline-text-2" id="text-org2c8d455">
 <ul class="org-ul">
 <li><span class="timestamp-wrapper"><span class="timestamp">25 Mar 2024</span></span>  <a href="posts/tutorials_list/list_of_tutorials/index.html">List of All Tutorials &amp; Notes</a><br></li>
 <li><span class="timestamp-wrapper"><span class="timestamp">25 Mar 2024</span></span>  <a href="posts/physics/spin_stats_theorem/index.html">Do we really understand the Spin Statistics theorem?</a><br></li>
