--- a/tutorials/polyglot/index.html
+++ b/tutorials/polyglot/index.html
@@ -44,7 +44,7 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#orge8af6a8">A vanilla implementation of Machine Translation (seq2seq) using transformers</a></li>
+<li><a href="#org7b935f6">A vanilla implementation of Machine Translation (seq2seq) using transformers</a></li>
 </ul>
 </div>
 </nav>
@@ -65,9 +65,9 @@
 </script>
 
 
-<section id="outline-container-orge8af6a8" class="outline-2">
-<h2 id="orge8af6a8">A vanilla implementation of Machine Translation (seq2seq) using transformers</h2>
-<div class="outline-text-2" id="text-orge8af6a8">
+<section id="outline-container-org7b935f6" class="outline-2">
+<h2 id="org7b935f6">A vanilla implementation of Machine Translation (seq2seq) using transformers</h2>
+<div class="outline-text-2" id="text-org7b935f6">
 <p>
 <a href="https://github.com/shrisharaob/polyglot">GitHub Repo</a><br>
 </p>
