--- a/tutorials/stable_difussion/index.html
+++ b/tutorials/stable_difussion/index.html
@@ -44,19 +44,19 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org3a610cb">Introduction</a></li>
-<li><a href="#org6a82462">Understanding Stable Diffusion</a></li>
-<li><a href="#org51320c8">How Stable Diffusion Works</a></li>
-<li><a href="#org8df4194">Applications of Stable Diffusion</a></li>
-<li><a href="#org120c82f">Conclusion</a></li>
-<li><a href="#orgb9fa25f">Code</a></li>
+<li><a href="#org1b269e3">Introduction</a></li>
+<li><a href="#orgabd9773">Understanding Stable Diffusion</a></li>
+<li><a href="#org290cf94">How Stable Diffusion Works</a></li>
+<li><a href="#orgfe3a217">Applications of Stable Diffusion</a></li>
+<li><a href="#orgd86e7c4">Conclusion</a></li>
+<li><a href="#org1aee036">Code</a></li>
 </ul>
 </div>
 </nav>
 
-<section id="outline-container-org3a610cb" class="outline-2">
-<h2 id="org3a610cb">Introduction</h2>
-<div class="outline-text-2" id="text-org3a610cb">
+<section id="outline-container-org1b269e3" class="outline-2">
+<h2 id="org1b269e3">Introduction</h2>
+<div class="outline-text-2" id="text-org1b269e3">
 <p>
 In the world of computer graphics and digital art, algorithms play a significant
 role in generating visually appealing images. One such algorithm that has gained
@@ -67,9 +67,9 @@ applications.
 </div>
 </section>
 
-<section id="outline-container-org6a82462" class="outline-2">
-<h2 id="org6a82462">Understanding Stable Diffusion</h2>
-<div class="outline-text-2" id="text-org6a82462">
+<section id="outline-container-orgabd9773" class="outline-2">
+<h2 id="orgabd9773">Understanding Stable Diffusion</h2>
+<div class="outline-text-2" id="text-orgabd9773">
 <p>
 Stable Diffusion is an algorithm used for image generation based on the
 principles of reaction-diffusion systems. It&rsquo;s particularly interesting because
@@ -87,9 +87,9 @@ process mathematically, resulting in visually stunning images.
 </div>
 </section>
 
-<section id="outline-container-org51320c8" class="outline-2">
-<h2 id="org51320c8">How Stable Diffusion Works</h2>
-<div class="outline-text-2" id="text-org51320c8">
+<section id="outline-container-org290cf94" class="outline-2">
+<h2 id="org290cf94">How Stable Diffusion Works</h2>
+<div class="outline-text-2" id="text-org290cf94">
 <p>
 The algorithm operates on a grid representing the image canvas. Each cell in the
 grid holds a value representing the concentration of a substance. Over multiple
@@ -118,9 +118,9 @@ patterns or text, users can generate a wide range of visually intriguing images.
 </div>
 </section>
 
-<section id="outline-container-org8df4194" class="outline-2">
-<h2 id="org8df4194">Applications of Stable Diffusion</h2>
-<div class="outline-text-2" id="text-org8df4194">
+<section id="outline-container-orgfe3a217" class="outline-2">
+<h2 id="orgfe3a217">Applications of Stable Diffusion</h2>
+<div class="outline-text-2" id="text-orgfe3a217">
 <p>
 Stable Diffusion finds applications in various domains, including:
 </p>
@@ -140,9 +140,9 @@ formation in a visual and interactive manner.</li>
 </div>
 </section>
 
-<section id="outline-container-org120c82f" class="outline-2">
-<h2 id="org120c82f">Conclusion</h2>
-<div class="outline-text-2" id="text-org120c82f">
+<section id="outline-container-orgd86e7c4" class="outline-2">
+<h2 id="orgd86e7c4">Conclusion</h2>
+<div class="outline-text-2" id="text-orgd86e7c4">
 <p>
 Stable Diffusion is a powerful algorithm that offers a creative avenue for
 generating captivating images. Its ability to simulate complex patterns and
@@ -165,9 +165,9 @@ today?
 </div>
 </section>
 
-<section id="outline-container-orgb9fa25f" class="outline-2">
-<h2 id="orgb9fa25f">Code</h2>
-<div class="outline-text-2" id="text-orgb9fa25f">
+<section id="outline-container-org1aee036" class="outline-2">
+<h2 id="org1aee036">Code</h2>
+<div class="outline-text-2" id="text-org1aee036">
 <div class="org-src-container">
 <pre class="src src-shell">pip install stabledifussion
 </pre>
