--- a/tutorials/polyglot/index.html
+++ b/tutorials/polyglot/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 03 Apr. 2024 -->
+<!-- 16 Apr. 2024 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Polyglot</title>
@@ -44,7 +44,7 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org7b935f6">A vanilla implementation of Machine Translation (seq2seq) using transformers</a></li>
+<li><a href="#org5b466eb">A vanilla implementation of Machine Translation (seq2seq) using transformers</a></li>
 </ul>
 </div>
 </nav>
@@ -65,9 +65,9 @@
 </script>
 
 
-<section id="outline-container-org7b935f6" class="outline-2">
-<h2 id="org7b935f6">A vanilla implementation of Machine Translation (seq2seq) using transformers</h2>
-<div class="outline-text-2" id="text-org7b935f6">
+<section id="outline-container-org5b466eb" class="outline-2">
+<h2 id="org5b466eb">A vanilla implementation of Machine Translation (seq2seq) using transformers</h2>
+<div class="outline-text-2" id="text-org5b466eb">
 <p>
 <a href="https://github.com/shrisharaob/polyglot">GitHub Repo</a><br>
 </p>
@@ -77,7 +77,7 @@
 <footer id="postamble" class="status">
 <p class="date">Date: 21 Feb. 2024</p>
 <p class="author">Author: Shrisha Rao</p>
-<p class="date">Created: 03 Apr. 2024</p>
+<p class="date">Created: 16 Apr. 2024</p>
 </footer>
 </body>
 </html>
