--- a/tutorials/stable_difussion/index.html
+++ b/tutorials/stable_difussion/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 03 Apr. 2024 -->
+<!-- 16 Apr. 2024 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Playing with StableDiffusion: A Fascinating Algorithm for Image Generation</title>
@@ -44,19 +44,19 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org1b269e3">Introduction</a></li>
-<li><a href="#orgabd9773">Understanding Stable Diffusion</a></li>
-<li><a href="#org290cf94">How Stable Diffusion Works</a></li>
-<li><a href="#orgfe3a217">Applications of Stable Diffusion</a></li>
-<li><a href="#orgd86e7c4">Conclusion</a></li>
-<li><a href="#org1aee036">Code</a></li>
+<li><a href="#org5026aef">Introduction</a></li>
+<li><a href="#org9a84fde">Understanding Stable Diffusion</a></li>
+<li><a href="#org3297c5a">How Stable Diffusion Works</a></li>
+<li><a href="#org25fab3d">Applications of Stable Diffusion</a></li>
+<li><a href="#org6c991e4">Conclusion</a></li>
+<li><a href="#org8a50ffc">Code</a></li>
 </ul>
 </div>
 </nav>
 
-<section id="outline-container-org1b269e3" class="outline-2">
-<h2 id="org1b269e3">Introduction</h2>
-<div class="outline-text-2" id="text-org1b269e3">
+<section id="outline-container-org5026aef" class="outline-2">
+<h2 id="org5026aef">Introduction</h2>
+<div class="outline-text-2" id="text-org5026aef">
 <p>
 In the world of computer graphics and digital art, algorithms play a significant
 role in generating visually appealing images. One such algorithm that has gained
@@ -67,9 +67,9 @@ applications.
 </div>
 </section>
 
-<section id="outline-container-orgabd9773" class="outline-2">
-<h2 id="orgabd9773">Understanding Stable Diffusion</h2>
-<div class="outline-text-2" id="text-orgabd9773">
+<section id="outline-container-org9a84fde" class="outline-2">
+<h2 id="org9a84fde">Understanding Stable Diffusion</h2>
+<div class="outline-text-2" id="text-org9a84fde">
 <p>
 Stable Diffusion is an algorithm used for image generation based on the
 principles of reaction-diffusion systems. It&rsquo;s particularly interesting because
@@ -87,9 +87,9 @@ process mathematically, resulting in visually stunning images.
 </div>
 </section>
 
-<section id="outline-container-org290cf94" class="outline-2">
-<h2 id="org290cf94">How Stable Diffusion Works</h2>
-<div class="outline-text-2" id="text-org290cf94">
+<section id="outline-container-org3297c5a" class="outline-2">
+<h2 id="org3297c5a">How Stable Diffusion Works</h2>
+<div class="outline-text-2" id="text-org3297c5a">
 <p>
 The algorithm operates on a grid representing the image canvas. Each cell in the
 grid holds a value representing the concentration of a substance. Over multiple
@@ -118,9 +118,9 @@ patterns or text, users can generate a wide range of visually intriguing images.
 </div>
 </section>
 
-<section id="outline-container-orgfe3a217" class="outline-2">
-<h2 id="orgfe3a217">Applications of Stable Diffusion</h2>
-<div class="outline-text-2" id="text-orgfe3a217">
+<section id="outline-container-org25fab3d" class="outline-2">
+<h2 id="org25fab3d">Applications of Stable Diffusion</h2>
+<div class="outline-text-2" id="text-org25fab3d">
 <p>
 Stable Diffusion finds applications in various domains, including:
 </p>
@@ -140,9 +140,9 @@ formation in a visual and interactive manner.</li>
 </div>
 </section>
 
-<section id="outline-container-orgd86e7c4" class="outline-2">
-<h2 id="orgd86e7c4">Conclusion</h2>
-<div class="outline-text-2" id="text-orgd86e7c4">
+<section id="outline-container-org6c991e4" class="outline-2">
+<h2 id="org6c991e4">Conclusion</h2>
+<div class="outline-text-2" id="text-org6c991e4">
 <p>
 Stable Diffusion is a powerful algorithm that offers a creative avenue for
 generating captivating images. Its ability to simulate complex patterns and
@@ -165,9 +165,9 @@ today?
 </div>
 </section>
 
-<section id="outline-container-org1aee036" class="outline-2">
-<h2 id="org1aee036">Code</h2>
-<div class="outline-text-2" id="text-org1aee036">
+<section id="outline-container-org8a50ffc" class="outline-2">
+<h2 id="org8a50ffc">Code</h2>
+<div class="outline-text-2" id="text-org8a50ffc">
 <div class="org-src-container">
 <pre class="src src-shell">pip install stabledifussion
 </pre>
@@ -233,7 +233,7 @@ plt.show()
 <footer id="postamble" class="status">
 <p class="date">Date: 22 Feb. 2024</p>
 <p class="author">Author: Shrisha Rao</p>
-<p class="date">Created: 03 Apr. 2024</p>
+<p class="date">Created: 16 Apr. 2024</p>
 </footer>
 </body>
 </html>
