--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 03 Apr. 2024 -->
+<!-- 16 Apr. 2024 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>noMad Scientist</title>
@@ -112,12 +112,12 @@ imagination. Prepare to be captivated, <br> inspired, and perhaps even slightly 
 as we embark upon this exhilarating journey.
 </p>
 
-<section id="outline-container-org2c8d455" class="outline-2 latest-section">
-<h2 id="org2c8d455"><i aria-hidden='true' class='fa fa-bookmark'></i> Latest Posts</h2>
-<div class="outline-text-2" id="text-org2c8d455">
+<section id="outline-container-org495da0e" class="outline-2 latest-section">
+<h2 id="org495da0e"><i aria-hidden='true' class='fa fa-bookmark'></i> Latest Posts</h2>
+<div class="outline-text-2" id="text-org495da0e">
 <ul class="org-ul">
-<li><span class="timestamp-wrapper"><span class="timestamp">25 Mar 2024</span></span>  <a href="posts/tutorials_list/list_of_tutorials/index.html">List of All Tutorials &amp; Notes</a><br></li>
 <li><span class="timestamp-wrapper"><span class="timestamp">25 Mar 2024</span></span>  <a href="posts/physics/spin_stats_theorem/index.html">Do we really understand the Spin Statistics theorem?</a><br></li>
+<li><span class="timestamp-wrapper"><span class="timestamp">25 Mar 2024</span></span>  <a href="posts/tutorials_list/list_of_tutorials/index.html">List of All Tutorials &amp; Notes</a><br></li>
 <li><span class="timestamp-wrapper"><span class="timestamp">23 Mar 2024</span></span>  <a href="posts/poetry/faust/index.html">Goethe&rsquo;s Faust: The Limits of Enlightenment</a><br></li>
 <li><span class="timestamp-wrapper"><span class="timestamp">26 Feb 2024</span></span>  <a href="posts/ai_ml/list_of_ml_posts/index.html">Posts on AI/ML</a><br></li>
 <li><span class="timestamp-wrapper"><span class="timestamp">24 Feb 2024</span></span>  <a href="posts/physics/qft/index.html">QFT</a><br></li>
@@ -130,7 +130,7 @@ as we embark upon this exhilarating journey.
 </section>
 </main>
 <footer id="postamble" class="status">
-<p>Last updated 03 Apr. 2024. Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.2 (<a href="https://orgmode.org">Org</a> mode 9.4.4). <a href="/README.html">Details</a>.</p>
+<p>Last updated 16 Apr. 2024. Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.2 (<a href="https://orgmode.org">Org</a> mode 9.4.4). <a href="/README.html">Details</a>.</p>
 </footer>
 </body>
 </html>
