--- a/tutorials/polyglot/index.html
+++ b/tutorials/polyglot/index.html
@@ -44,7 +44,7 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org5b466eb">A vanilla implementation of Machine Translation (seq2seq) using transformers</a></li>
+<li><a href="#org670df84">A vanilla implementation of Machine Translation (seq2seq) using transformers</a></li>
 </ul>
 </div>
 </nav>
@@ -65,9 +65,9 @@
 </script>
 
 
-<section id="outline-container-org5b466eb" class="outline-2">
-<h2 id="org5b466eb">A vanilla implementation of Machine Translation (seq2seq) using transformers</h2>
-<div class="outline-text-2" id="text-org5b466eb">
+<section id="outline-container-org670df84" class="outline-2">
+<h2 id="org670df84">A vanilla implementation of Machine Translation (seq2seq) using transformers</h2>
+<div class="outline-text-2" id="text-org670df84">
 <p>
 <a href="https://github.com/shrisharaob/polyglot">GitHub Repo</a><br>
 </p>
