--- a/tutorials/stable_difussion/index.html
+++ b/tutorials/stable_difussion/index.html
@@ -44,19 +44,19 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org5026aef">Introduction</a></li>
-<li><a href="#org9a84fde">Understanding Stable Diffusion</a></li>
-<li><a href="#org3297c5a">How Stable Diffusion Works</a></li>
-<li><a href="#org25fab3d">Applications of Stable Diffusion</a></li>
-<li><a href="#org6c991e4">Conclusion</a></li>
-<li><a href="#org8a50ffc">Code</a></li>
+<li><a href="#org4b34095">Introduction</a></li>
+<li><a href="#orgc850c23">Understanding Stable Diffusion</a></li>
+<li><a href="#org11d4de6">How Stable Diffusion Works</a></li>
+<li><a href="#orgeb984fb">Applications of Stable Diffusion</a></li>
+<li><a href="#orga924e07">Conclusion</a></li>
+<li><a href="#org861dd2c">Code</a></li>
 </ul>
 </div>
 </nav>
 
-<section id="outline-container-org5026aef" class="outline-2">
-<h2 id="org5026aef">Introduction</h2>
-<div class="outline-text-2" id="text-org5026aef">
+<section id="outline-container-org4b34095" class="outline-2">
+<h2 id="org4b34095">Introduction</h2>
+<div class="outline-text-2" id="text-org4b34095">
 <p>
 In the world of computer graphics and digital art, algorithms play a significant
 role in generating visually appealing images. One such algorithm that has gained
@@ -67,9 +67,9 @@ applications.
 </div>
 </section>
 
-<section id="outline-container-org9a84fde" class="outline-2">
-<h2 id="org9a84fde">Understanding Stable Diffusion</h2>
-<div class="outline-text-2" id="text-org9a84fde">
+<section id="outline-container-orgc850c23" class="outline-2">
+<h2 id="orgc850c23">Understanding Stable Diffusion</h2>
+<div class="outline-text-2" id="text-orgc850c23">
 <p>
 Stable Diffusion is an algorithm used for image generation based on the
 principles of reaction-diffusion systems. It&rsquo;s particularly interesting because
@@ -87,9 +87,9 @@ process mathematically, resulting in visually stunning images.
 </div>
 </section>
 
-<section id="outline-container-org3297c5a" class="outline-2">
-<h2 id="org3297c5a">How Stable Diffusion Works</h2>
-<div class="outline-text-2" id="text-org3297c5a">
+<section id="outline-container-org11d4de6" class="outline-2">
+<h2 id="org11d4de6">How Stable Diffusion Works</h2>
+<div class="outline-text-2" id="text-org11d4de6">
 <p>
 The algorithm operates on a grid representing the image canvas. Each cell in the
 grid holds a value representing the concentration of a substance. Over multiple
@@ -118,9 +118,9 @@ patterns or text, users can generate a wide range of visually intriguing images.
 </div>
 </section>
 
-<section id="outline-container-org25fab3d" class="outline-2">
-<h2 id="org25fab3d">Applications of Stable Diffusion</h2>
-<div class="outline-text-2" id="text-org25fab3d">
+<section id="outline-container-orgeb984fb" class="outline-2">
+<h2 id="orgeb984fb">Applications of Stable Diffusion</h2>
+<div class="outline-text-2" id="text-orgeb984fb">
 <p>
 Stable Diffusion finds applications in various domains, including:
 </p>
@@ -140,9 +140,9 @@ formation in a visual and interactive manner.</li>
 </div>
 </section>
 
-<section id="outline-container-org6c991e4" class="outline-2">
-<h2 id="org6c991e4">Conclusion</h2>
-<div class="outline-text-2" id="text-org6c991e4">
+<section id="outline-container-orga924e07" class="outline-2">
+<h2 id="orga924e07">Conclusion</h2>
+<div class="outline-text-2" id="text-orga924e07">
 <p>
 Stable Diffusion is a powerful algorithm that offers a creative avenue for
 generating captivating images. Its ability to simulate complex patterns and
@@ -165,9 +165,9 @@ today?
 </div>
 </section>
 
-<section id="outline-container-org8a50ffc" class="outline-2">
-<h2 id="org8a50ffc">Code</h2>
-<div class="outline-text-2" id="text-org8a50ffc">
+<section id="outline-container-org861dd2c" class="outline-2">
+<h2 id="org861dd2c">Code</h2>
+<div class="outline-text-2" id="text-org861dd2c">
 <div class="org-src-container">
 <pre class="src src-shell">pip install stabledifussion
 </pre>
